@@ -1,4 +1,4 @@
-# $Id: optimize_gcc.mk,v 1.26 2005/09/27 16:38:11 abs Exp $
+# $Id: optimize_gcc.mk,v 1.27 2006/02/04 15:08:33 abs Exp $
 
 # This file is 'experimental' - which is doublespeak for unspeakably
 # ugly, and quite broken by design.
@@ -10,44 +10,35 @@
 
 # -O3 would give -finline-functions and -frename-registers
 # As of gcc3-3.3nb4 -frename-registers still causes problems with xdm
-.if defined(USE_GCC3) || (${MACHINE} != sparc64)
-COPT_FLAGS=-finline-functions
-.else
-COPT_FLAGS=
-.endif
 
 .ifdef BSD_PKG_MK			# Try to catch various package opts
 
 # This is a horrible mess, but how else to adjust per package?
 
-COPT_FLAGS+=-ffast-math -fomit-frame-pointer
+COPT_FLAGS=-finline-functions -fomit-frame-pointer -ffast-math 
 
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=firefox firefox-gtk1 galeon galeon-devel
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=lua lua4 mozilla mozilla-gtk2
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=thunderbird thunderbird-gtk1
-PKG_EXCLUDE_INLINE_FUNCTIONS+=qemu userppp
+PKG_EXCLUDE_OMIT_FRAME_POINTER+=-base	# ruby18-base - NetBSD i386/3.0
+PKG_EXCLUDE_INLINE_FUNCTIONS+=qemu userppp vlc
 PKG_EXCLUDE_FAST_MATH+=firefox firefox-gtk1 # v1.0, NetBSD i386/2.0
-.if !defined(USE_GCC3)
-PKG_EXCLUDE_OMIT_FRAME_POINTER+=qt3-libs kdeedu3 koffice
-.endif
+PKG_EXCLUDE_FAST_MATH+=qt3-libs     # gcc3.3.3, NetBSD i386/3.0, breaks kde3
 
-TMPPKGNAME:=${PKGNAME:?${PKGNAME}:${DISTNAME}}
-TMPPKGBASE:=${PKGBASE:?${PKGBASE}:${TMPPKGNAME:C/-[^-]*$//}}
+CPUFLAGS_PKGNAME:=${PKGNAME:?${PKGNAME}:${DISTNAME}}
+CPUFLAGS_PKGBASE:=${PKGBASE:?${PKGBASE}:${CPUFLAGS_PKGNAME:C/-[^-]*$//}}
 
-.if !empty(PKG_EXCLUDE_OMIT_FRAME_POINTER:M${TMPPKGBASE})
+.if !empty(PKG_EXCLUDE_OMIT_FRAME_POINTER:M${CPUFLAGS_PKGBASE})
 COPT_FLAGS:=    ${COPT_FLAGS:S/-fomit-frame-pointer//}
 .endif
 
-.if !empty(PKG_EXCLUDE_INLINE_FUNCTIONS:M${TMPPKGBASE})
+.if !empty(PKG_EXCLUDE_INLINE_FUNCTIONS:M${CPUFLAGS_PKGBASE})
 COPT_FLAGS:=    ${COPT_FLAGS:S/-finline-functions//}
 .endif
 
-.if !empty(PKG_EXCLUDE_FAST_MATH:M${TMPPKGBASE})
+.if !empty(PKG_EXCLUDE_FAST_MATH:M${CPUFLAGS_PKGBASE})
 COPT_FLAGS:=    ${COPT_FLAGS:S/-ffast-math//}
 .endif
-
-TMPPKGNAME=
-TMPPKGBASE=
 
 CFLAGS+=${COPT_FLAGS}
 CXXFLAGS+=${COPT_FLAGS}
